--- a/pwa-news-dio/pwa-news-dio/public/index.html
+++ b/pwa-news-dio/pwa-news-dio/public/index.html
@@ -29,6 +29,20 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <script>
+      if("serviceWorker"in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/sw.js', {useCache: true}).then(function(registration) {
+            console.log("Registro realizado", registration.scope)
+          }, function(err) {
+            console.log("SW falhou")
+          }).catch(function(err) {
+            console.log(err)
+          })
+        })
+      }
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
